@@ -1,3 +1,8 @@
+2007-02-22  Scott Reeves  <sreeves@novell.com>
+	* etc/YaST-gnome.desktop.in
+	* etc/Makefile.am:
+	Fix up desktop file - BNC #248025 and #240240
+
 2007-02-05  Michael Meeks  <michael.meeks@novell.com>
 
 	* configure.in: remove
